# Flight-Computer-Maquina-de-Estados-em-Rust

./: Cargo.toml  README.md  flight_log.txt
docs/: flight_phases_stepper.html  rust_flight_computer_manual.html
src/: errors.rs  events.rs  main.rs  rocket.rs  sensors.rs
src/states/: ignition.rs  max_q.rs  meco.rs  mod.rs  orbit.rs  pre_launch.rs  separation.rs
src/subsystems/: mod.rs  navigation.rs  propulsion.rs  telemetry.rs
